# Diracxx

./: CMakeLists.txt  DiracxxConfig.cmake.in
notebooks/: Getting_started_with_google_colab_ai.ipynb
python/: diracxx.py
src/: CMakeLists.txt
